[package]
name = "utu"
version = "0.1.0"
authors = ["Chris O'Brian <ardusjax@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8.0"
anyhow = "1.0.42"
log = "0.4"
mongodb = { version = "1.2.2", default-features = false, features = ["async-std-runtime"]}
openssl = { version = "0.10"}
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.4"

#[dependencies.mongodb]
#version = "1.2.2"
#default-features = false
#features = ["async-std-runtime"]